--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test mocha --timeout 30000",
-    "deploy": "node ./bin/deploy.js"
+    "deploy": "AWS_REGION=us-west-2 node ./bin/deploy.js"
   },
   "repository": {
     "type": "git",
